# mlops-zoomcamp

./: .gitignore  README.md  mlops_env.yml  mlops_env_m1.yml
hw/hw1/: hw1.ipynb
hw/hw2/: hw2.md  train.py
hw/hw4/: Dockerfile  starter.py
hw/hw6/: batch.py  docker-compose.yml  test_integration.py
hw/hw6/tests/: integration_test.py  test_batch.py
hw2/: hpo.py  hw2.ipynb  register_model.py  train.py
hw3/: 1.py  homework.ipynb  hw3_prefect.py  hw3_prefect_orchestration.py  pyproject.toml
hw4/: Pipfile  docker_commands  pyproject.toml  starter.ipynb  test.py
hw6/: Dockerfile
